--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap');
+
 :root {
   --white: rgba(255, 255, 255, 1);
   --black: rgba(0, 0, 0, 1);
@@ -22,7 +24,7 @@ body {
 
 a {
   color: inherit;
-  text-decoration: none;
+  text-decoration: none !important;
 }
 
 .ant-input-affix-wrapper {
